2008-05-27  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* printf.h: added

	* file.h (tino_file_read_allE): pointer changed to void *

2008-05-23  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* filetool.h: Naming convention
	(tino_file_glue_path): changed such, that the length now is
	calculated, name changed to tino_file_glue_pathOi (i acts as a
	warning that some internals have changed, will be removed in
	future again).
	(tino_file_rename_with_empty_helperEs): added
	(tino_file_backupnameNi): memory leak resolved
	
2008-05-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* Makefile.proto (test): added "make test"

	* Makefile-tests.sh: added, needs file "Tests"

	* ex.h (tino_verror_ext): forgot output of ": " sequence

2008-05-15  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* make test now successful again

	* Makefile-test.sh (CFLAGS): -I- is deprecated, now uses -iquote

	* sockbuf.h (tino_sockbuf_newOn): memory leak resolved

2008-05-14  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* ex.h (tino_verror_ext): added to be able to augment the prefix

2008-05-07  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* err.h: TINO_ERR macro now works for GCC past 3.3 as expected

	* main_getini.h (tino_main_if): Case of "no arg functions" added,
	in this case there is a NULL call to the main.

2008-05-04  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* alloc.h: added nameing convention

2008-01-18  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* Makefile-diet.sh (TINODIETCC): added -Os to get smallest build
	on "make static"

2008-01-03  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* C++ specific changes for cleaner compile, many datatypes
	promoted from signed to unsigned etc.

	* Makefile.proto: C++ function warning removed

2007-12-31  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_adrnameN, tino_sock_get_peernameN) 
	(tino_sock_get_socknameN): renamed from ...E to ...N
