@@ -1,5 +1,7 @@
 2008-05-27  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
+	* file.h (tino_file_rename_unlinkEbs): added
+
 	* printf.h: added
 
 	* file.h (tino_file_read_allE): pointer changed to void *
